--- a/defense/main.tex
+++ b/defense/main.tex
@@ -1348,11 +1348,10 @@ Example:
 	Allow only minimal (maximal) value\\
 	\vfill
 	Forbids other assignment in each orbit\\
-	$\rightarrow$ Add Symmetry breaking predicates (SBP)
+	$\enspace \rightarrow$ Add Symmetry breaking predicates (SBP)
 	
 	\vfill
 	
-	\scriptsize
 Example:\\
 \begin{itemize}
 	\item[]	$x_1 \leq x_2 \leq x_3  \leq x_4 \leq x_5 \leq x_6 \leq x_7 \leq x_8 ;  \false < \true$
@@ -1374,7 +1373,7 @@ Example:\\
 \end{center}
 \vfill
 	\normalsize
-	\visible<4->{Generate SBP $\omega = \{ \neg x_1, x_2\}$}
+	\centering \visible<4->{Generate SBP $\omega = \{ \neg x_1, x_2\}$}
 	
 \end{frame}
 
@@ -1739,16 +1738,42 @@ Compute and inject SBP \textcolor{hgreen}{opportunistically}, during the solving
 \end{frame}
 %% ----------------------------------------------------------------------------
 
+\begin{frame}
+	\frametitle{Example}
+	\centering
+	
+	\begin{itemize}
+		\item[]	$x_1 \leq x_2 \leq x_3  \leq x_4 \leq x_5 \leq x_6 \leq x_7 \leq x_8 ;  \false < \true$
+		\item[] 	$g = (x_1 \enskip x_2)(x_4 \enskip x_5)(x_7 \enskip x_8) $\\
+	\end{itemize}
+	
+	\vfill
+	\begin{center}
+		\begin{tabular}{cccccccccc}
+			& $x_1$ & $x_2$ & $x_3$ & $x_4$ & $x_5$ & $x_6$ & $x_7$& $x_8$ \\
+			\toprule
+			$g.\alpha$ & \only<1>{\udef}\only<2->{\false}  & \only<1-3>{\udef}\only<4->{\true}  & \udef & \udef & \only<1-2>{\udef}\only<3->{\false} & \udef& \udef& \udef \\
+			&&&&\visible<4->{$\prec$}&&&\\
+			$\alpha$ &\only<1-3>{\udef}\only<4->{\true} & \only<1>{\udef}\only<2->{\false}  & \udef & \only<1-2>{\udef}\only<3->{\false} & \udef & \udef& \udef& \udef \\
+		\end{tabular}
+	\vfill
+	\end{center}
+	status : \only<1-3>{\texttt{active}}\only<4->{\texttt{reducer}}
+	\vfill
+\visible<4->{Generate ESBP $\omega = \{\neg x_1, x_2\}$}
+\end{frame}
+
 
 %% ----------------------------------------------------------------------------
 \begin{frame}
 \frametitle{CDCL[Sym] Implementation}
 \begin{itemize}
+	\item C++ Implementation 
 	\item Packaged as a library \textbf{\libdsb}\footnote{\url{https://github.com/lip6/cosy}} (Controller of Symmetry)
 %	, to be combined with your solver\\{\color{blue}\hfill$\rightarrow$ e.g. +3\% LOC on \minisat}.
-
 	\item Lightweight
-	\item Fast update and low memory
+	\item Fast update
+	\item Low memory consumption
 	\item Follows symmetry status
 
 	\vfill
