--- a/defense/main.tex
+++ b/defense/main.tex
@@ -27,7 +27,6 @@
 
 \usepackage{multirow}
 \usepackage{adjustbox}
-
 \usepackage{booktabs}
 \usepackage{subfig}
 
@@ -90,8 +89,11 @@
     \begin{column}[T]{\textwidth}
       \includegraphics[height=1.2cm]{images/logo_sorbonne}
       \hfill
+      \includegraphics[height=1.2cm]{images/cnrs}
+      \hfill
+      \includegraphics[height=1.2cm]{images/logo-edite}
+      \hfill
       \includegraphics[height=1.3cm]{images/lip6}
-      \centering
     \end{column}
   \end{columns}
 \end{frame}
@@ -194,12 +196,17 @@
 
 \begin{tikzpicture}[overlay]
 \tikzstyle{line} = [<-, line width=0.5mm];
-\visible<2>{
+\visible<2->{
 \path[line] (t1) edge  (s1.south);
 \path[line] (t2) edge  (s2.south);
 \path[line] (t3) edge  (s3.south);
 }
-\visible<3>{
+\visible<3->{
+\path[line, color=green] (t2.south west) edge  (s1.south);
+\path[line, color=green] (t3.south west) edge  (s2.south);
+\path[line, color=green] (t1.south west) edge  (s3.south);
+}
+\visible<4>{
 \path[line, color=red] (t1) edge  (s2.south);
 \path[line, color=red] (t2) edge  (s1.south);
 \path[line, color=red] (t3) edge  (s3.south);
@@ -212,12 +219,9 @@
 \path[line, color=blue] (t2) edge  (s2.south);
 \path[line, color=blue] (t3) edge  (s1.south);
 
-\path[line, color=green] (t2.south west) edge  (s1.south);
-\path[line, color=green] (t3.south west) edge  (s2.south);
-\path[line, color=green] (t1.south west) edge  (s3.south);
 
 \path[line, color=purple] (t1.south west) edge  (s2.south);
-\path[line, color=purple] (t2.south west) edge  (s3.south);
+\path[line, color=purple] (t2.south east) edge  (s3.south);
 \path[line, color=purple] (t3.south west) edge  (s1.south);
 }
 \end{tikzpicture}
@@ -225,9 +229,9 @@
 \vfill
 Is it possible to attribute each group to a unique classroom?\\
 \begin{center}
-	\visible<2->{YES!  SAT!  $\enspace \alpha = (A,1), (B,2), (C, 3)$\\ }
-	\visible<3->{Many solutions $\alpha = (A,2), (B,3), (C, 1)$; $\cdots$
-		\\ }
+	\visible<2->{YES!  \texttt{SAT}  $\enspace \alpha = (A,1), (B,2), (C, 3)$\\ }
+	\visible<3->{Many solutions $\alpha' = (A,2), (B,3), (C, 1)$}\\
+		 \visible<4->{$\alpha'' = \cdots$}
 \end{center}
 
 
@@ -257,7 +261,7 @@ Is it possible to attribute each group to a unique classroom?\\
 \vfill
 Is it possible to attribute each group to a unique classroom?
 \begin{center}
-	\visible<2->{No! UNSAT}
+	\visible<2->{No! \texttt{UNSAT}}
 
 \end{center}
 
@@ -267,26 +271,32 @@ Is it possible to attribute each group to a unique classroom?
 \begin{frame}
 \frametitle{Encoding the problem}
 	
-
+\vspace{1em}
 	
 \begin{columns}
 	\begin{column}{0.1\textwidth}
 		\small
-		$(A,1) (A,2) (A,3)$\\
+		$ \overbrace{(A,1)}^{x_1} \overbrace{(A,2)}^{x_2} \overbrace{(A,3)}^{x_3}$\\
 		$(B,1) (B,2) (B,3)$\\
 		$(C,1) (C,2) (C,3)$\\
 		\vspace{1em}
+		\visible<2->{
 		$ \neg (A,1)  \neg (B,1)$\\
 		$ \neg (A,1)  \neg (C,1)$\\
 		$ \neg (B,1)  \neg (C,1)$\\
+		}
 		\vspace{1em}
+		\visible<3->{
 		$ \neg (A,2)  \neg (B,2)$\\
 		$ \neg (A,2)  \neg (C,2)$\\
 		$ \neg (B,2)  \neg (C,2)$\\
+		}
 		\vspace{1em}
+		\visible<3->{
 		$ \neg (A,3)  \neg (B,3)$\\
 		$ \neg (A,3)  \neg (C,3)$\\
 		$ \neg (B,3)  \neg (C,3)$\\
+		}
 	\end{column}
 	\begin{column}{0.2\textwidth}  %%<--- here
 		\small
@@ -294,28 +304,35 @@ Is it possible to attribute each group to a unique classroom?
 		$(x_4 \lor  x_5 \lor x_6) \enspace \land$\\
 		$(x_7 \lor  x_8 \lor x_9) \enspace \land$\\
 		\vspace{1em}
+		\visible<2->{
 		$(\neg x_1 \lor  \neg x_4) \enspace \land$\\
 		$(\neg x_1 \lor  \neg x_7) \enspace \land$\\
 		$(\neg x_4 \lor  \neg x_7) \enspace \land$\\
+	}
+
 		\vspace{1em}
+		\visible<3->{
 		$(\neg x_2 \lor  \neg x_5) \enspace \land$\\
 		$(\neg x_2 \lor  \neg x_8) \enspace \land$\\
 		$(\neg x_5 \lor  \neg x_8) \enspace \land$\\
+	}
 		\vspace{1em}
+		\visible<3->{
 		$(\neg x_3 \lor  \neg x_6) \enspace \land$\\
 		$(\neg x_3 \lor  \neg x_9) \enspace \land$\\
 		$(\neg x_6 \lor  \neg x_9) \enspace $\\
+	}
 	\end{column}
 \end{columns}
 
 \begin{tikzpicture}[overlay]
-	\node[rounded, thick, minimum width=2cm, minimum height=0.5cm,opacity=0,onslide={<2->,opacity=1}] (c) at (208pt, 169pt) {};
-	\node[,opacity=0,onslide={<2->,opacity=1}] (ct) at ($(c) + (+90pt, 10pt)$)  {Clause};
-	\draw [->,thick,opacity=0,onslide={<2->,opacity=1}] (ct.west) to [bend right=30] (c);
+	\node[rounded, thick, minimum width=2cm, minimum height=0.5cm,opacity=0,onslide={<4->,opacity=1}] (c) at (208pt, 176pt) {};
+	\node[,opacity=0,onslide={<4->,opacity=1}] (ct) at ($(c) + (+90pt, 10pt)$)  {Clause};
+	\draw [->,thick,opacity=0,onslide={<4->,opacity=1}] (ct.west) to [bend right=30] (c);
 	
-	\node[rounded, thick, minimum width=3cm, minimum height=6.5cm,opacity=0,onslide={<3->,opacity=1}](f) at (210pt, 88pt) {};
-	\node[,opacity=0,onslide={<3->,opacity=1},align=center] (ft) at ($(f) + (+90pt, 0pt)$) {Conjunctive\\ Normal\\ Form (CNF)};
-	\draw [->,thick,opacity=0,onslide={<3->,opacity=1}] (ft.west) to [bend right=0] (f);
+	\node[rounded, thick, minimum width=3cm, minimum height=6.5cm,opacity=0,onslide={<5->,opacity=1}](f) at (210pt, 93pt) {};
+	\node[,opacity=0,onslide={<5->,opacity=1},align=center] (ft) at ($(f) + (+90pt, 0pt)$) {Conjunctive\\ Normal\\ Form (CNF)};
+	\draw [->,thick,opacity=0,onslide={<5->,opacity=1}] (ft.west) to [bend right=0] (f);
 	
 	\node[](p) at (20pt, 88pt) {\includegraphics[width=.25\textwidth]{images/plan2}};
 	
@@ -329,7 +346,7 @@ Is it possible to attribute each group to a unique classroom?
 %	}
 \vfill
 
-\visible<4->{
+\visible<6->{
 	Clause represented as a set:
 	\begin{center}
 		$(x_1 \lor x_2 \lor x_3) \rightarrow \{x_1, x_2, x_3\}$
@@ -506,15 +523,15 @@ Is it possible to attribute each group to a unique classroom?
 		linecurr/.style = {line, line width=0.7mm, draw=purple!80},
 	}
 	
-	\node (isfin) [question] {All vars\\ assign?};
+	\node (isfin) [question] {All vars\\ assigned?};
 	\node (dec)     [process] at ($(isfin) + (0pt, -50pt)$)    {Choose decision var};
 	\node (sdec)     [right = of dec]          {Start};
 	\node (idec) [left = of isfin]  {};
-	\node (prop)    [process] at ($(dec) + (0pt, -30pt)$)          {Unit Propagation};
+	\node (prop)    [process] at ($(dec) + (0pt, -30pt)$)          {Unit propagation};
 	
 	
-	\node (conf)    [question] at ($(prop) + (0pt, -40pt)$){ Is Conflict?};
-	\node (confanalyse) [process] at ($(conf) + (0pt, -60pt)$) {Conflict Analysis};
+	\node (conf)    [question] at ($(prop) + (0pt, -40pt)$){ Is conflict?};
+	\node (confanalyse) [process] at ($(conf) + (0pt, -60pt)$) {Conflict analysis};
 	\node (learn) [process] at ($(prop) + (90pt, 0)$) {Learn conflict clause\\ and backjump};
 	\node (isend) [question] at ($(confanalyse) + (90pt, 0)$) {is level\\zero?};
 	\node (end) [unsat,double=black!10,double distance=0.5mm] at ($(isend) + (90pt, 0)$) {$unsatiasfiable$};
@@ -861,16 +878,15 @@ draw,thick,fill=blue!30,rotate=0,font=\scriptsize]
 }
 
 %\node (isfin) [question] {All vars\\ assign?};
-\node[opacity=0,onslide={<2,6,10>,opacity=1}] (dec)     [process] at (220pt, 200pt)   {Choose decision var};
-\node[opacity=0,onslide={<2,6,10>,opacity=1}] (prop)    [process]  at (310pt, 200pt)          {Unit Propagation};
-\draw[->,thick,opacity=0,onslide={<2,6,10>,opacity=1}] (dec) -> (prop);
-
-\node[opacity=0,onslide={<5,9,11>,opacity=1}] (propm)    [process]  at (280pt, 200pt)          {Unit Propagation};
+\node[opacity=0,onslide={<2,6,10>,opacity=1}] (dec)     [process] at (220pt, 200pt)   {Choose decision var};%
+\node[opacity=0,onslide={<2,6,10>,opacity=1}] (prop)    [process]  at (310pt, 200pt)          {Unit Propagation};%
+\draw[->,thick,opacity=0,onslide={<2,6,10>,opacity=1}] (dec) -> (prop);%
+\node[opacity=0,onslide={<5,9,11>,opacity=1}] (propm)    [process]  at (280pt, 200pt)          {Unit Propagation};%
 %\node[opacity=0,onslide={<8>,opacity=1}] (conf)    [question]  at (280pt, 200pt){ Is Conflict?};
-\node[opacity=0,onslide={<3,7>,opacity=1}] (confanalyse) [process]  at (280pt, 200pt) {Conflict Analysis};
-\node[opacity=0,onslide={<4,8>,opacity=1}] (learn) [process]  at (280pt, 200pt) {Learn conflict clause\\ and backjump};
-%\node[opacity=0,onslide={<2>,opacity=1}] (isend) [question] at (280pt, 200pt) {is level\\zero?};
-%\node[opacity=0,onslide={<2>,opacity=1}] (end) [unsat,double=black!10,double distance=0.5mm] at (280pt, 200pt) {$unsatiasfiable$};
+\node[opacity=0,onslide={<3,7>,opacity=1}] (confanalyse) [process]  at (280pt, 200pt) {Conflict Analysis};%
+\node[opacity=0,onslide={<4,8>,opacity=1}] (learn) [process]  at (280pt, 198pt) {Learn conflict clause\\ and backjump};%
+%\node[opacity=0,onslide={<2>,opacity=1}] (isend) [question] at (280pt, 200pt) {is level\\zero?};%
+%\node[opacity=0,onslide={<2>,opacity=1}] (end) [unsat,double=black!10,double distance=0.5mm] at (280pt, 200pt) {$unsatiasfiable$};%
 \node[opacity=0,onslide={<12>,opacity=1}] (ends) [sat,double=black!10,double distance=0.5mm]  at (280pt, 200pt){$satisfiable$};
 
 
@@ -878,17 +894,17 @@ draw,thick,fill=blue!30,rotate=0,font=\scriptsize]
 
 \vfill 
 \centering 
-\only<1> {$\alpha = \{ \}$}
-\only<2> {$\alpha = \{ \neg x_1 \}$}
-\only<3> {$\alpha = \{ \neg x_1 \}$}
-\only<4> {$\alpha = \{  \}$}
-\only<5> {$\alpha = \{  x_1 \}$}
-\only<6> {$\alpha = \{  x_1, \neg x_2 \}$}
-\only<7> {$\alpha = \{  x_1, \neg x_2 \}$}
-\only<8> {$\alpha = \{  x_1 \}$}
-\only<9> {$\alpha = \{  x_1, x_2 \}$}
+\only<1> {$\alpha = \{ \}$}%
+\only<2> {$\alpha = \{ \neg x_1 \}$}%
+\only<3> {$\alpha = \{ \neg x_1 \}$}%
+\only<4> {$\alpha = \{  \}$}%
+\only<5> {$\alpha = \{  x_1 \}$}%
+\only<6> {$\alpha = \{  x_1, \neg x_2 \}$}%
+\only<7> {$\alpha = \{  x_1, \neg x_2 \}$}%
+\only<8> {$\alpha = \{  x_1 \}$}%
+\only<9> {$\alpha = \{  x_1, x_2 \}$}%
 \only<10> {$\alpha = \{  x_1, x_2, \neg x_3 \}$}
-\only<11-> {$\alpha = \{  x_1, x_2, \neg x_3, x_4 \}$}
+\only<11-> {$\alpha = \{  x_1, x_2, \neg x_3, x_4 \}$}%
 \end{frame}
 
 
@@ -960,7 +976,7 @@ draw,thick,fill=blue!30,rotate=0,font=\scriptsize]
 
 \begin{tabular}{cc}
 	\includegraphics[scale=0.07]{images/room} & \includegraphics[scale=0.07]{images/room}\\
-	\tikz[baseline]{\node[anchor=base] (r1){\only<1-4>{1} \only<5->{2}};} & \tikz[baseline]{\node[anchor=base] (r2){\only<1-4>{2} \only<5->{1}};}\\
+	\tikz[baseline]{\node[anchor=base] (r1){\only<1-4>{1} \only<5->{\st{1} 2}};} & \tikz[baseline]{\node[anchor=base] (r2){\only<1-4>{2} \only<5->{\st{2} 1}};}\\
 
 	
 \end{tabular}
@@ -970,7 +986,7 @@ draw,thick,fill=blue!30,rotate=0,font=\scriptsize]
 \begin{tabular}{ccc}
 	\tikz[baseline]{\node[anchor=base] (g1){};} & \tikz[baseline]{\node[anchor=base] (g2){};} & \tikz[baseline,opacity=0,scale=8,onslide={<2-3>,opacity=1}]{\node[anchor=base] (g3){?};}\\
 	\includegraphics[scale=0.1]{images/south} & \includegraphics[scale=0.1]{images/simpson} & \includegraphics[scale=0.09]{images/titeuf}\\
-	A     & \only<1-4>{B} \only<5->{C}         & \only<1-4>{C} \only<5->{B}\\
+	A     & \only<1-4>{B} \only<5->{\st{B} C}         & \only<1-4>{C} \only<5->{\st{C} B}\\
 \end{tabular}
 
 \visible<2->{
@@ -1040,7 +1056,7 @@ draw,thick,fill=blue!30,rotate=0,font=\scriptsize]
 \begin{frame}
 \everymath{\displaystyle}
 
-	\frametitle{Symmetry (Syntactic)}
+	\frametitle{Syntactic symmetry }
 	\normalsize
 	A symmetry (permuation) $g$ is a bijective function (on variables) that leaves the formula $\varphi$ invariant
 	\vfill
@@ -1052,6 +1068,8 @@ draw,thick,fill=blue!30,rotate=0,font=\scriptsize]
 	\end{tabular}\bigg)}\hfill $\rightarrow$\hfill
 	$(x_1 \enskip x_2)(x_4 \enskip x_5)(x_7 \enskip x_8) $\\
 	%(\neg x_1 \neg x_2)(\neg x_4 \neg x_5)(\neg x_7 \neg x_8)$\\
+}
+\visible<3->{
 	\vfill
 	 \begin{columns}[t]
 		\begin{column}[T]{.3\textwidth}
@@ -1077,12 +1095,12 @@ draw,thick,fill=blue!30,rotate=0,font=\scriptsize]
 		\item[] $\tikz[baseline]{\node[anchor=base] (b1){};} \omega_{1} = \{x_2  ,  x_1  ,  x_3\}$
 		\item[] $\tikz[baseline]{\node[anchor=base] (b2){};} \omega_{2} = \{x_5  ,  x_4  ,  x_6\} $
 		\item[] $\tikz[baseline]{\node[anchor=base] (b3){};} \omega_{3} = \{x_8  ,  x_7  ,  x_9\} $
-		\item[] $\tikz[baseline]{\node[anchor=base] (b4){};} \omega_{7} = \{\neg x_2  ,  \neg x_5\} $
-		\item[] $\tikz[baseline]{\node[anchor=base] (b5){};} \omega_{8} = \{\neg x_2  ,  \neg x_8\} $
-		\item[] $\tikz[baseline]{\node[anchor=base] (b6){};} \omega_{9} = \{\neg x_5  ,  \neg x_8\} $
-		\item[] $\tikz[baseline]{\node[anchor=base] (b7){};} \omega_{4} = \{\neg x_1  ,  \neg x_4\} $
-		\item[] $\tikz[baseline]{\node[anchor=base] (b8){};} \omega_{5} = \{\neg x_1  ,  \neg x_7\} $
-		\item[] $\tikz[baseline]{\node[anchor=base] (b9){};} \omega_{6} = \{\neg x_4  ,  \neg x_7\} $
+		\item[] $\tikz[baseline]{\node[anchor=base] (b4){};} \omega_{4} = \{\neg x_2  ,  \neg x_5\} $
+		\item[] $\tikz[baseline]{\node[anchor=base] (b5){};} \omega_{5} = \{\neg x_2  ,  \neg x_8\} $
+		\item[] $\tikz[baseline]{\node[anchor=base] (b6){};} \omega_{6} = \{\neg x_5  ,  \neg x_8\} $
+		\item[] $\tikz[baseline]{\node[anchor=base] (b7){};} \omega_{7} = \{\neg x_1  ,  \neg x_4\} $
+		\item[] $\tikz[baseline]{\node[anchor=base] (b8){};} \omega_{8} = \{\neg x_1  ,  \neg x_7\} $
+		\item[] $\tikz[baseline]{\node[anchor=base] (b9){};} \omega_{9} = \{\neg x_4  ,  \neg x_7\} $
 		\item[] $\tikz[baseline]{\node[anchor=base] (b10){};} \omega_{10} = \{\neg x_3  ,  \neg x_6\} $
 		\item[] $\tikz[baseline]{\node[anchor=base] (b11){};} \omega_{11} = \{\neg x_3  ,  \neg x_9\} $
 		\item[] $\tikz[baseline]{\node[anchor=base] (b12){};} \omega_{12} = \{\neg x_6  ,  \neg x_9\} $
@@ -1110,9 +1128,12 @@ draw,thick,fill=blue!30,rotate=0,font=\scriptsize]
 \vfill
 \normalsize
 %\centering The set of symmetries of a formula is a group noted $G$
-	\visible<3->{
-Equi-satisfiability:
-	$$\alpha \models \varphi \Leftrightarrow g.\alpha \models \varphi$$
+	\visible<4->{
+\begin{block}{Equi-satisfiability}
+	\centering
+	$\alpha \models \varphi \Leftrightarrow g.\alpha \models \varphi$
+\end{block}
+
 }
 \end{frame}
 
@@ -1345,12 +1366,13 @@ Example:
 		\item Minimum value: $\false < \true$ or $\true < \false$
 	\end{itemize}
 \vfill
-	Allow only minimal (maximal) value\\
+	Allow only minimal value (lex-leader)\\
 	\vfill
-	Forbids other assignment in each orbit\\
+	Forbids other assignments in each orbit\\
 	$\enspace \rightarrow$ Add Symmetry breaking predicates (SBP)
 	
 	\vfill
+	\visible<2->{
 	
 Example:\\
 \begin{itemize}
@@ -1374,7 +1396,7 @@ Example:\\
 \vfill
 	\normalsize
 	\centering \visible<4->{Generate SBP $\omega = \{ \neg x_1, x_2\}$}
-	
+}
 \end{frame}
 
 %% ----------------------------------------------------------------------------
@@ -1575,7 +1597,7 @@ Example:\\
 
 	\node[box,minimum height=1.2cm] (cnf) {CNF};
 	\node[box] (sym) at (-3, -1) { Symmetries};
-	\node[box,minimum height=1.2cm,onslide={<3>, starburst}] (sbp) at (0, -2) { SBPs};
+	\node[box,minimum height=1.2cm,onslide={<3>, starburst,draw=red}] (sbp) at (0, -2) { SBPs};
 
 	
 	\node[box, minimum height=3.5cm, minimum width=2cm, line width=0.5mm, opacity=0,onslide={<2->, opacity=1}] at (0, -1) (full) {$\land$};
@@ -1613,6 +1635,8 @@ State-of-the-art approaches:
 
 \begin{frame}
 \centering
+\textcolor{UPMCEngagementBlueB}{\Large First contribution }\\
+\vspace{2em}
 \textcolor{UPMCEngagementBlueB}{\Large CDCL[sym] Introducing Effective Symmetry Breaking in SAT Solving }\\
 \vspace{2em}
 \textcolor{UPMCEngagementBlueB}{\Large  TACAS'18~\cite{metin2018cdclsym}}
@@ -1744,12 +1768,14 @@ Compute and inject SBP \textcolor{hgreen}{opportunistically}, during the solving
 	
 	\begin{itemize}
 		\item[]	$x_1 \leq x_2 \leq x_3  \leq x_4 \leq x_5 \leq x_6 \leq x_7 \leq x_8 ;  \false < \true$
+		\item[]
 		\item[] 	$g = (x_1 \enskip x_2)(x_4 \enskip x_5)(x_7 \enskip x_8) $\\
 	\end{itemize}
 	
 	\vfill
 	\begin{center}
 		\begin{tabular}{cccccccccc}
+			& $\downarrow$ &&&&&&&\\
 			& $x_1$ & $x_2$ & $x_3$ & $x_4$ & $x_5$ & $x_6$ & $x_7$& $x_8$ \\
 			\toprule
 			$g.\alpha$ & \only<1>{\udef}\only<2->{\false}  & \only<1-3>{\udef}\only<4->{\true}  & \udef & \udef & \only<1-2>{\udef}\only<3->{\false} & \udef& \udef& \udef \\
@@ -1758,15 +1784,15 @@ Compute and inject SBP \textcolor{hgreen}{opportunistically}, during the solving
 		\end{tabular}
 	\vfill
 	\end{center}
-	status : \only<1-3>{\texttt{active}}\only<4->{\texttt{reducer}}
+	status of permutation g: \only<1-3>{\texttt{active}}\only<4->{\texttt{reducer}}
 	\vfill
-\visible<4->{Generate ESBP $\omega = \{\neg x_1, x_2\}$}
+\visible<5->{Generate ESBP $\omega = \{\neg x_1, x_2\}$}
 \end{frame}
 
 
 %% ----------------------------------------------------------------------------
 \begin{frame}
-\frametitle{CDCL[Sym] Implementation}
+\frametitle{CDCL[Sym] implementation}
 \begin{itemize}
 	\item C++ Implementation 
 	\item Packaged as a library \textbf{\libdsb}\footnote{\url{https://github.com/lip6/cosy}} (Controller of Symmetry)
@@ -1843,10 +1869,10 @@ Compute and inject SBP \textcolor{hgreen}{opportunistically}, during the solving
 \begin{tabular}{lcccc}
 	Solver & PAR-2 & ALL & SAT & UNSAT\\
 	\toprule
-	\texttt{MiniSAT} & 2243h & 586 &325 &261 \\
-	\texttt{Shatter} &2088h & 640 & 316 &324 \\
-	\texttt{BreakID} &1790h & 749 &334 &415 \\
-	\textbf{\texttt{MiniSym}} &  \cellcolor{gray!30}\textbf{1735h} &  \cellcolor{gray!30}\textbf{775} & \cellcolor{gray!30}\textbf{336} &  \cellcolor{gray!30}\textbf{439} \\
+	\textcolor{orange}{\texttt{MiniSAT}} & 2243h & 586 &325 &261 \\
+	\textcolor{green}{\texttt{Shatter}} &2088h & 640 & 316 &324 \\
+	\textcolor{red}{\texttt{BreakID}} &1790h & 749 &334 &415 \\
+	\textcolor{blue}{\textbf{\texttt{MiniSym}}} &  \cellcolor{gray!30}\textbf{1735h} &  \cellcolor{gray!30}\textbf{775} & \cellcolor{gray!30}\textbf{336} &  \cellcolor{gray!30}\textbf{439} \\
 
 \end{tabular}
 
@@ -2205,6 +2231,8 @@ State-of-the-art:
 
 \begin{frame}
 	\centering
+	\textcolor{UPMCEngagementBlueB}{\Large Second contribution }\\
+	\vspace{2em}
 	\textcolor{UPMCEngagementBlueB}{\Large Composing Symmetry Propagation and Effective Symmetry Breaking for SAT Solving }\\
 	\vspace{2em}
 	\textcolor{UPMCEngagementBlueB}{\Large  NFM'19~\cite{metin2019composing}}
@@ -2334,7 +2362,7 @@ In a hybrid approach, SP must be able to identify\\ \textbf{valid symmetries}
 		\item \visible<3->{On the fly}\\
 	\item \visible<3->{At minimal cost}\\
 	\end{itemize}
-	\centering \visible<3->{\textbf{Inductive construction}}
+	\centering \visible<4->{\textbf{Inductive construction}}
 \end{column}
 \end{columns}
 \end{frame}
@@ -2427,53 +2455,60 @@ In a hybrid approach, SP must be able to identify\\ \textbf{valid symmetries}
 \begin{tabular}{lcccc}
 	Solver & PAR-2 & ALL & SAT & UNSAT\\
 	\toprule
-	SP & 1674h00 & 876 & 406 & 470 \\
-	ESBP & 1578h30 & 904 & 416 & 488\\
-	ESBP-SP & \cellcolor{gray!30}\textbf{1570h15} & \cellcolor{gray!30}\textbf{911} & \cellcolor{gray!30}\textbf{420} & \cellcolor{gray!30}\textbf{491}\\
+	\textcolor{green}{SP} & 1674h00 & 876 & 406 & 470 \\
+	\textcolor{blue}{ESBP} & 1578h30 & 904 & 416 & 488\\
+	\textcolor{red}{\textbf{ESBP-SP}} & \cellcolor{gray!30}\textbf{1570h15} & \cellcolor{gray!30}\textbf{911} & \cellcolor{gray!30}\textbf{420} & \cellcolor{gray!30}\textbf{491}\\
 \end{tabular}
 \end{frame}
 
 \begin{frame}
-\frametitle{Conclusion}
-\begin{itemize}
+\frametitle{Conclusion \& Perspectives}
+
+	 Conclusion
+	\begin{itemize}
 	\item A new dynamic symmetry breaking approach
 	\begin{itemize}
 		\item Generation of SBP on the fly
 		\item Package as a library $\libdsb$ usable with any CDCL solver
-		\item Overcomes drawbacks of the existing approaches
 	\end{itemize}
 
-\vfill
 	\item A new hybrid approach (ESBP-SP)
-
 	\begin{itemize}
 		\item Take advantage of static and dynamic approach
-		\item Introduce local symmetries
+		\item \textcolor{orange}{Combination of  CDCL[Sym] with SEL}
 	\end{itemize}
 \end{itemize}
-
-\end{frame}
-%% ----------------------------------------------------------------------------
-\begin{frame}
-\frametitle{Perspectives}
-\begin{itemize}
-	\item Combination of CDCL[Sym] with other dynamic symmetry breaking approach
-
-
-	\vfill
-	\item Combination with parallel SAT solver
-
-	\vfill
-	\item Exploitation of partial symmetries
-
-
-
-\end{itemize}
-
+\vfill
+ Perspectives
+ \begin{itemize}
+ 	\item 	Symmetries and parallel SAT solver
+ 	\item 	Exploitation of partial symmetries
+ \end{itemize}
 \vfill
 \flushright
 \visible<2>{\textbf{Thanks !}}
 \end{frame}
+%% ----------------------------------------------------------------------------
+%\begin{frame}
+%\frametitle{Perspectives}
+%\begin{itemize}
+%	\item Combination of CDCL[Sym] with other dynamic symmetry breaking approach
+%
+%
+%	\vfill
+%	\item Combination with parallel SAT solver
+%
+%	\vfill
+%	\item Exploitation of partial symmetries
+%
+%
+%
+%\end{itemize}
+%
+%\vfill
+%\flushright
+%\visible<2>{\textbf{Thanks !}}
+%\end{frame}
 
 
 %\begin{frame}
